--- a/prectice-javascript/style.css
+++ b/prectice-javascript/style.css
@@ -1,5 +1,6 @@
 h1 {
-    color: cyan;
+    color: white;
+    background-color: blue;
     text-align: center;
     font-style: italic;
     font-family: 'Times New Roman', Times, serif;
