--- a/prectice-javascript/style.css
+++ b/prectice-javascript/style.css
@@ -17,3 +17,9 @@
         padding: 20px;
         margin: 0px;
     }
+    
+    ul {
+        text-align: center;
+        font-style: bold;
+        font-family: 'Times New Roman', Times, serif;
+    }
