--- a/prectice-javascript/style.css
+++ b/prectice-javascript/style.css
@@ -23,3 +23,9 @@
         font-style: bold;
         font-family: 'Times New Roman', Times, serif;
     }
+    
+    form {
+        text-align: center;
+        font-style: bold;
+        font-family: 'Times New Roman', Times, serif;
+    }
