--- a/prectice-javascript/style.css
+++ b/prectice-javascript/style.css
@@ -29,3 +29,7 @@
         font-style: bold;
         font-family: 'Times New Roman', Times, serif;
     }
+    
+    body {
+        background-color: black;
+    }
