--- a/prectice-javascript/style.css
+++ b/prectice-javascript/style.css
@@ -1,6 +1,6 @@
     h1 {
         color: white;
-        background-color: blue;
+        background-color: darkolivegreen;
         text-align: center;
         font-style: italic;
         font-family: 'Times New Roman', Times, serif;
