--- a/prectice-javascript/style.css
+++ b/prectice-javascript/style.css
@@ -1,6 +1,6 @@
     h1 {
         color: white;
-        background-color: darkolivegreen;
+        background-color: navy;
         text-align: center;
         font-style: italic;
         font-family: 'Times New Roman', Times, serif;
@@ -10,7 +10,7 @@
     
     h3 {
         color: grey;
-        background-color: navy;
+        background-color: blue;
         text-align: center;
         font-style: bold;
         font-family: 'Times New Roman', Times, serif;
