--- a/prectice-javascript/style.css
+++ b/prectice-javascript/style.css
@@ -2,7 +2,7 @@
         color: white;
         background-color: navy;
         text-align: center;
-        font-style: italic;
+        font-style: bold;
         font-family: 'Times New Roman', Times, serif;
         padding: 30px;
         margin: 0px;
