--- a/prectice-javascript/style.css
+++ b/prectice-javascript/style.css
@@ -9,7 +9,7 @@
     }
     
     h3 {
-        color: grey;
+        color: white;
         background-color: blue;
         text-align: center;
         font-style: bold;
